# oneseismic

./: .devcontainer.Dockerfile  .devcontainer.json  .dockerignore  .gitignore  .golangci.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  TestPlan.jmx  api-codegen-config.json  azure-integration-tests.yml  azure-pipelines.yml  docker-compose-nginx.conf  docker-compose.yml  docker-compose_tests.yml  events.go  generate.py  generate_sdk.sh  radixconfig.yaml
.github/: .golangci.yml  revive_config.toml
.github/workflows/: azure.yaml  ci.yaml  e2e.yaml  golang-ci.yml  golangci.yml  ingestion.yml  js.yaml  main.yml  reviewdog.yml  revive.yml  wheels.yaml  wheels.yml
api/: .dockerignore  Dockerfile  Dockerfile-corestub  Dockerfile-swagger  api-codegen-config.json  check_test_coverage.sh  config.go  config_test.go  dev.go  generate.go  go.mod  go.sum  main.go  main_test.go  prod.go  sample.json  server_test.go
api/api/: credentials.go  curtain.go  endpoint.go  errors.go  graphql.go  graphql_test.go  query.cpp  query.go  query.h  result.go  result_test.go  scheduler.cpp  scheduler.go  scheduler.h  scheduler_test.go  slice.cpp  slice.go  slice.h  slice_test.go  storage.go
api/auth/: auth.go  auth_test.go  oauth2.go  openidConf.go  openidConf_test.go
api/catalogue/: graphql.go  schema.graphql
api/cmd/: config.go  config_test.go  defaults.go  root.go  run_serve_test.go  serve.go  serve_test.go  zmqMock.go  zmqMock_test.go
cli/: bench.json  client.py  get.py
client/: requirements-dev.txt  setup.py
core/: CMakeLists.txt  Dockerfile  entrypoint.sh  tmp_fuse_connection.cfg
core/client/: client.py
core/core-server/: CMakeLists.txt  server.cpp  setup-CMakeLists.txt  setup.py
core/core-server/proto/: core.grpc.pb.cc  core.grpc.pb.h  core.pb.cc  core.pb.h
core/core-server/server/: server.py  stitch.cpp
core/core-server/server/proto/: core_pb2_grpc.py
core/fetchcurl/: CMakeLists.txt
core/fetchcurl/src/: fetch.cpp
core/include/oneseismic/: azure.hpp  decoder.hpp  geometry.hpp  geometry.impl.hpp  load_balancer.hpp  messages.hpp  plan.hpp  process.hpp  tasks.hpp  transfer.hpp  worker.hpp
core/include/seismic-cloud/: fetch.hpp  geometry.hpp  seismic-cloud.hpp  url.hpp
core/ingestion/: .dockerignore  Dockerfile  Pipfile  docker-compose.yml  setup.cfg
core/ingestion/blobio/: setup.cfg  setup.py
core/ingestion/blobio/blobio/: __init__.py
core/ingestion/scan/: setup.cfg  setup.py
core/ingestion/scan/scan/: __main__.py  scan.py  segmenter.py
core/ingestion/scan/scan/tests/: test_binary_header.py  test_main.py  test_segmenter.py  test_trace_header.py
core/ingestion/scan/scan/tests/data/: missing-line-numbers.json  small-iline-5-xline-21-lsb.sgy  small-iline-5-xline-21.json  small-iline-5-xline-21.sgy  small-lsb.json  small.json
core/ingestion/tests/: setup.cfg  test_int.py
core/ingestion/tests/data/: small.json
core/ingestion/upload/: requirements-dev.txt  setup.cfg  setup.py
core/ingestion/upload/upload/: __main__.py  upload.py
core/ingestion/upload/upload/tests/: test_upload.py
core/python/: CMakeLists.txt  requirements-dev.txt  setup.py
core/python/oneseismic/: CMakeLists.txt  geometry.cpp
core/python/oneseismic/tests/: test_geometry.py
core/src/: azure.cpp  base64.cpp  benchmark.py  core.cpp  decoder.cpp  fetch.cpp  generate.cpp  generate_surfaces.cpp  geometry.cpp  load_balancer.cpp  log.hpp  manifest.cpp  messages.cpp  plan.cpp  process.cpp  server-fragment.cpp  server-manifest.cpp  server.cpp  stitch.cpp  transfer.cpp  url.cpp  verifyer.cpp  worker.cpp
core/tests/: azure-transfer-config.cpp  config.hpp  fragment-task.cpp  generators.hpp  geometry.cpp  load_balancer.cpp  manifest-task.cpp  messages.cpp  mhttpd.hpp  process.cpp  request-generator.cpp  seismic-cloud.cpp  testsuite.cpp  transfer-http.cpp  utility.hpp
corestub/: Dockerfile  go.mod  go.sum  main.go
deploy/: create_support_structure.sh  fetch.bicep  main.bicep  nginx.Dockerfile  nginx.bicep  nginx.conf  support_structure.bicep  update.sh
doc/: Config.md  Logging.md
javascript/: CMakeLists.txt  README.md  build.sh  decoder.cpp  decoding.js  emscripten.dockerfile  package-lock.json  package.json
javascript/demo/: demo-node.js  demo.html
javascript/spec/: decodeSpec.js
javascript/tests/: streaming.js
monitoring/: README.md  docker-compose.yml
protos/: core.proto
python/: CMakeLists.txt  README.rst  conftest.py  pad-segy.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
python/oneseismic/: __init__.py  __main__.py  decoder.cpp
python/oneseismic/client/: __init__.py  client.py  ls.py
python/oneseismic/client/tests/: client_test.py
python/oneseismic/decoding/: __init__.py  decoding.py  xarray.py
python/oneseismic/internal/: __init__.py  argparse.py  blobfs.py  localfs.py  process.py  test_argparse.py  test_process.py
python/oneseismic/login/: __main__.py  login.py  test_config.py
python/oneseismic/scan/: __init__.py  __main__.py  scan.py  scanners.py  segmenter.py
python/oneseismic/scan/tests/: test_binary_header.py  test_main.py  test_scan.py  test_segmenter.py  test_trace_header.py
python/oneseismic/scan/tests/data/: missing-line-numbers.sgy  small-2byte-keys.sgy  small-iline-5-xline-21-lsb.json
python/oneseismic/simple/: __init__.py  aztools.py  simple_client.py  test_simple.py
python/oneseismic/upload/: __init__.py  __main__.py  upload.py
python/oneseismic/upload/tests/: test_upload.py
python/oneseismic/upload/tests/small/: 0-1-1.f32  1-0-1.f32  1-1-0.f32  1-1-1.f32
python/scan/: readme  setup.py
python/upload/: readme  setup.cfg
scripts/: setup_core.sh
sdk/: Dockerfile  Pipfile  README.md  example.py  setup.py
src/: CMakeLists.txt  benchmark.py  benchmark_report.py  check_shatters.cpp  generate.cpp  shatter.cpp  stitch.cpp
ssl/: gen.sh
tests/: .env  Dockerfile  conftest.py  docker-compose.local.yml  docker-compose.yml  generators.hpp  get_version.py  integration_tests.py  invalid_tokens.json  requirements.txt  seismic-cloud.cpp  test.sh  test_integration.py
tmp/: api.yml
(+194 files in other folders)
