[metadata]
name = oneseismic
description = oneseismic
long_description = file: README.rst
long_description_content_type = text/x-rst
license = LGPL-3.0
url = https://github.com/equinor/oneseismic
version = 0.2.0

[options]
packages =
    oneseismic
    oneseismic.client
    oneseismic.internal
    oneseismic.login
    oneseismic.scan
    oneseismic.upload

install_requires =
    azure-storage-blob
    gql
    msal
    numpy
    requests
    segyio
    tqdm
    xdg
    msgpack
    xarray

setup_requires =
    pytest-runner

tests_require =
    hypothesis
    pytest
    requests_mock
    segyio

[aliases]
test = pytest
