[metadata]
name = oneseismic
description = oneseismic
long_description = file: README.rst
long_description_content_type = text/x-rst
license = LGPL-3.0
url = https://github.com/equinor/oneseismic
version = 0.2.5

[options]
install_requires =
    azure-storage-blob
    azure-identity
    gql
    numpy
    requests
    segyio
    tqdm
    xarray
    importlib-metadata >= '1.0'; python_version < '3.8'

tests_require =
    hypothesis
    pytest
    pytest-runner
    segyio

[aliases]
test = pytest
